--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 
 .hero{
 	height: 100vh;
-	background: url('../images/bg.jpg');
+	background: url('../images/bg.jpg?v2');
 	background-size: cover;
 	background-position: left center;
 }
